Changes the branch patern to back-ci.yml

--- a/.github/workflows/back-ci.yml
+++ b/.github/workflows/back-ci.yml
@@ -2,9 +2,12 @@ name: Python CI
 
 on:
   push:
-    branches: [ main ]
+    branches:
+        - '**'
+
   pull_request:
-    branches: [ main ]
+    branches:
+        - '**'
 
 jobs:
   build:
