--- a/.github/workflows/back-ci.yml
+++ b/.github/workflows/back-ci.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip3 install -r ./back/requirements.txt
+        pip3 install -r ./back/requirements.dev.txt
 
     - name: Black formatting
       run: |
