Adds the content of requirements.txt into requirements.dev.txt

--- a/.github/workflows/back-ci.yml
+++ b/.github/workflows/back-ci.yml
@@ -42,5 +42,4 @@ jobs:
 
     - name: Pylint linting
       run: |
-        pylint --rcfile=./back/.pylintrc ./back/core
-        pylint --rcfile=./back/.pylintrc ./back/api
+        pylint --rcfile=./back/.pylintrc ./back
