--- a/back/requirements.dev.txt
+++ b/back/requirements.dev.txt
@@ -19,3 +19,15 @@
  black==24.3.0
  pylint==3.1.0
  pylint_django
+ asgiref==3.8.1
+ Django>=5.0.3,<5.1
+ django-dotenv
+ django-storages==1.11.1
+ django-cors-headers==4.3.1
+ djangorestframework==3.15.1
+ djangorestframework-simplejwt
+ psycopg2-binary
+ sqlparse==0.4.4
+ boto3
+ requests
+ gunicorn
